# Comfy-image-browser

./: .gitignore  README.md  build.bat  index.html  package-lock.json  package.json  progress.md  project.md  run.bat  tailwind.config.js  vite.config.ts
docs/: POC.html  architecture.md  development_guide.md  feature_msa_prompt_merging.md  features_and_ux.md  metadata_engine_architecture_and_troubleshooting.md  metadata_pipeline.md  moc.md  reference_analysis.md  roadmap.md  tag_classifier_settings.json
docs/archive/: bug_fix_search.md  metadata_engine_architecture_and_troubleshooting.md  moc.md  roadmap.md
legacy/: GEMINI.md  ImageManager.spec  app.py  app_controller.py  benchmark_metadata.py  config.py  db_manager.py  image_loader.py  image_manager_config.json  image_utils.py  main.py  progress.md  project.md  readme.md  run.bat  temp.md  test_app.py  test_batch_logic.py  ui.py  ui_view.py  visual_debug_test.py  visual_debugger.py
reference/: README.md  app.py  core.py  default_exact_exclusion.txt  default_partial_exclusion.txt  metadata_reader.py  tag_compressor.py
src/: App.tsx  index.css  main.tsx
src-tauri/: .image_manager_v2.db-journal  Cargo.toml  characters.txt  default_exact_exclusion.txt  default_exception_exclusion.txt  default_partial_exclusion.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crop.rs  db.rs  file_ops.rs  lib.rs  metadata.rs  scanner.rs  thumbnails.rs  twitter.rs  wildcard.rs
src-tauri/src/wildcard/: commands.rs  expansion.rs  filter.rs  merger.rs  mix.rs  mod.rs  types.rs  utils.rs
(+16 files in other folders)
