[package]
name = "comfy-view"
version = "0.1.0"
description = "A fast and comfy image browser"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
rayon = "1.11.0"
image = "0.25.9"
chrono = "0.4.43"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tauri-plugin-store = "2.4.2"
lazy_static = "1.5.0"
base64 = "0.22.1"
log = "0.4"
fern = "0.7"
arboard = "3.6.1"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
percent-encoding = "2.3.2"
hmac = "0.12.1"
sha1 = "0.10.6"

[dev-dependencies]
tempfile = "3.25.0"

